--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section class="PC">
         <section>
         <div class="card text-bg-dark">
-          <img src="./img/which-fromsoftware-soulsborne-game-is-the-hardest_feature.jpg" class="card-img" alt="...">
+          <img src="./img/which-fromsoftware-soulsborne-game-is-the-hardest_feature.jpg" class="card-img" alt="Imagen de portada">
           <div class="card-img-overlay">
             <h5 class="card-title">SOULSLIKER</h5>
             <p1 class="card-text">Un Fansite dedicado a los Soulslike/Soulsborne, aquellos mundos que nos desafian a cada momento</p>
@@ -68,19 +68,19 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="./img/Bloodborneport.avif" class="d-block w-100" alt="...">
+              <img src="./img/Bloodborneport.avif" class="d-block w-100" alt="portadadarksouls">
               <div class="carousel-caption d-none d-md-block">
                 <p class="pcarousel">Some representative placeholder content for the first slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/Code-Vein-head.jpg" class="d-block w-100" alt="...">
+              <img src="./img/Code-Vein-head.jpg" class="d-block w-100" alt="portadacodevein">
               <div class="carousel-caption d-none d-md-block">
                 <p class="pcarousel">Some representative placeholder content for the second slide.</p>
               </div>
             </div>
             <div class="carousel-item">
-              <img src="./img/Hollowknight.avif" class="d-block w-100" alt="...">
+              <img src="./img/Hollowknight.avif" class="d-block w-100" alt="portadahollowknight">
               <div class="carousel-caption d-none d-md-block">
                 <p class="pcarousel">Some representative placeholder content for the third slide.</p>
               </div>
@@ -101,7 +101,7 @@
           <h3 class="text-center">Abre las puertas al Mundo que deseas conocer</h3>
           <div class="card-group">
             <div class="card">
-              <img src="./img/hollow_knight-3915488.jpg" class="card-img-top" alt="...">
+              <img src="./img/hollow_knight-3915488.jpg" class="card-img-top" alt="logohollowknight">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -119,7 +119,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="./img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top" alt="...">
+              <img src="./img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top" alt="logoeldenring">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
@@ -137,7 +137,7 @@
               </div>
             </div>
             <div class="card">
-              <img src="./img/knxU5uU5aKvQChKX5OvWtSGC.webp" class="card-img-top" alt="...">
+              <img src="./img/knxU5uU5aKvQChKX5OvWtSGC.webp" class="card-img-top" alt="logosekiro">
               <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
@@ -169,20 +169,20 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="./img/EsvFXGYXUAoghze.jpg" class="d-block w-100" alt="...">
+                  <img src="./img/EsvFXGYXUAoghze.jpg" class="d-block w-100" alt="fanartdarksouls">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p>
                   </div>
                 </div>                <div class="carousel-item">
-                  <img src="./img/f9d5af20afc632f90b459b0f6c3408b9.jpg" class="d-block w-100" alt="...">
+                  <img src="./img/f9d5af20afc632f90b459b0f6c3408b9.jpg" class="d-block w-100" alt="editsekiro">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
                   </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                  <img src="./img/CODE.VEIN.full.2745734.jpg" class="d-block w-100" alt="...">
+                  <img src="./img/CODE.VEIN.full.2745734.jpg" class="d-block w-100" alt="fanartanimecodevein">
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
@@ -281,7 +281,7 @@
     </section>
 <section class="mobile">
   <div class="card text-bg-dark">
-    <img src="./img/which-fromsoftware-soulsborne-game-is-the-hardest_feature.jpg" class="card-img" alt="...">
+    <img src="./img/which-fromsoftware-soulsborne-game-is-the-hardest_feature.jpg" class="card-img" alt="portadasoulslike">
     <div class="card-img-overlay">
       <h5 class="card-title">SOULSLIKER</h5>
       <p1 class="card-text">Un Fansite dedicado a los Soulslike/Soulsborne, aquellos mundos que nos desafian a cada momento</p>
