cambie los alts de historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -44,7 +44,7 @@
       <div class="row row-cols-1 row-cols-md-2 g-4">
         <div class="col">
           <div class="card">
-            <img src="../img/202222585863_1.jpg" class="card-img-top" alt="...">
+            <img src="../img/202222585863_1.jpg" class="card-img-top" alt="imagendeMiyasaki">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -53,7 +53,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../img/88283_1_tencent-and-sony-buy-30-of-fromsoftware-for-259-5-million_full-1024x575.webp" class="card-img-top" alt="...">
+            <img src="../img/88283_1_tencent-and-sony-buy-30-of-fromsoftware-for-259-5-million_full-1024x575.webp" class="card-img-top" alt="imgconelnombredeFromSoftware">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
@@ -62,7 +62,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../img/GUk9iXZQYjUWuoYL8vdWhj.jpg" class="card-img-top" alt="...">
+            <img src="../img/GUk9iXZQYjUWuoYL8vdWhj.jpg" class="card-img-top" alt="librosDS">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -71,7 +71,7 @@
         </div>
         <div class="col">
           <div class="card">
-            <img src="../img/6228fdbad60efb2ed81cd3ff.jpg" class="card-img-top" alt="...">
+            <img src="../img/6228fdbad60efb2ed81cd3ff.jpg" class="card-img-top" alt="imgJuegosretro">
             <div class="card-body">
               <h5 class="card-title">Card title</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
