--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -44,7 +44,9 @@
 <section>
   <h1>Contacto</h1>
   <p>Nos interesa conocerte y saber tù opinion al respecto, saber que es lo que te gustaria, contenido que desees ver o cambios que harias. Recorda que tù opinion es de gran interes! </p>
-  <form action="envio.php">
+  </section>
+  <section class="media-c">
+  <form id="form-c" action="envio.php">
   <div class="form-floating mb-3">
     <input type="text" class="form-control" id="floatingInput" placeholder="nombre o alias">
     <label for="floatingInput">Nombre</label>
@@ -66,6 +68,7 @@
   <input class="btn btn-primary" type="submit" value="Submit">
 </div>
 </form>
+<img src="../img/f835b838475e5d1eee32b1093f76623b.png" id="Imgcop"  class="imgcopw" alt="jollycop">
 </section>
 <section>
   <h1>Preguntas Frecuentes</h1>
