--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css" integrity="sha384-PJsj/BTMqILvmcej7ulplguok8ag4xFTPryRq8xevL7eBYSmpXKcbNVuy+P0RMgq" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="shortcut icon" href="../img/desktop-wallpaper-dark-souls-bonfire-praise-the-sun.jpg" type="image/x-icon">
     <link rel="stylesheet" href="../css/styles.css">
     <title>Soulsliker</title>
@@ -68,7 +69,9 @@
   <input class="btn btn-primary" type="submit" value="Submit">
 </div>
 </form>
+<div class="animate_animated animate__heartBeat">
 <img src="../img/f835b838475e5d1eee32b1093f76623b.png" id="Imgcop"  class="imgcopw" alt="jollycop">
+</div>
 </section>
 <section>
   <h1>Preguntas Frecuentes</h1>
