--- a/pages/historia.html
+++ b/pages/historia.html
@@ -21,10 +21,10 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/historia.html">Historia</a>
+                    <a class="nav-link active" href="../pages/historia.html">Historia</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/videojuegos.html">Videojuegos</a>
