--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -21,7 +21,7 @@
               <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/historia.html">Historia</a>
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="../pages/videojuegos.html">Videojuegos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="../pages/tienda.html">Tienda</a>
+                    <a class="nav-link active" href="../pages/tienda.html">Tienda</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="../pages/soporte.html">Soporte</a>
