--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </section>
         <section>
-        <h2 class="text text-center">Conoce un poco de tu proximo Desafio</h2>
+        <h1 class="text text-center">Conoce un poco de tu proximo Desafio</h1>
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -70,19 +70,19 @@
             <div class="carousel-item active">
               <img src="./img/Bloodborneport.avif" class="d-block w-100" alt="portadadarksouls">
               <div class="carousel-caption d-none d-md-block">
-                <p class="pcarousel">Some representative placeholder content for the first slide.</p>
+                <p class="pcarousel">Adentrate en la oscuridad de la noche para enfrentar todos tus miedos.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./img/Code-Vein-head.jpg" class="d-block w-100" alt="portadacodevein">
               <div class="carousel-caption d-none d-md-block">
-                <p class="pcarousel">Some representative placeholder content for the second slide.</p>
+                <p class="pcarousel">Descubre una gran historia estilo anime que te pondra a prueba.</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="./img/Hollowknight.avif" class="d-block w-100" alt="portadahollowknight">
               <div class="carousel-caption d-none d-md-block">
-                <p class="pcarousel">Some representative placeholder content for the third slide.</p>
+                <p class="pcarousel">Conoce el Mejor Metroidvania, con una historia y personajes inolvidables.</p>
               </div>
             </div>
           </div>
@@ -98,22 +98,22 @@
         </section>
 
         <section>
-          <h3 class="text-center">Abre las puertas al Mundo que deseas conocer</h3>
+          <h1 class="text-center">Abre las puertas al Mundo que deseas conocer</h1>
           <div class="card-group">
             <div class="card">
               <img src="./img/hollow_knight-3915488.jpg" class="card-img-top" alt="logohollowknight">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <h5 class="card-title">Hollow Knight</h5>
+                <p class="card-text">Explora cavernas tortuosas, ciudades antiguas y páramos mortales. Combate contra criaturas corrompidas, haz nuevas amistades con extraños insectos y resuelve los antiguos misterios que yacen en el corazón del reino.</p>
                 <div class="dropdown">
                   <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Link de Compra
                   </a>
                 
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">PC</a></li>
+                    <li><a class="dropdown-item" href="#">PS4</a></li>
+                    <li><a class="dropdown-item" href="#">Xbox One</a></li>
                   </ul>
                 </div>
               </div>
@@ -121,17 +121,17 @@
             <div class="card">
               <img src="./img/esnQejHW2fLjVn3QsqMORML0.avif" class="card-img-top" alt="logoeldenring">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                <h5 class="card-title">Elden Ring</h5>
+                <p class="card-text">Desvela los misterios del poder del Círculo de Elden. Enfréntate a criaturas temibles y conoce a adversarios con pasados tumultuosos y personajes con sus propias motivaciones para ayudarte a avanzar o complicarte las cosas.</p>
                 <div class="dropdown">
                   <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Link de Compra
                   </a>
                 
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><a class="dropdown-item" href="#">PC</a></li>
+                    <li><a class="dropdown-item" href="#">PS4</a></li>
+                    <li><a class="dropdown-item" href="#">Xbox One</a></li>
                   </ul>
                 </div>
               </div>
@@ -139,8 +139,8 @@
             <div class="card">
               <img src="./img/knxU5uU5aKvQChKX5OvWtSGC.webp" class="card-img-top" alt="logosekiro">
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                <h5 class="card-title">Sekiro Shadows Die Twice</h5>
+                <p class="card-text">Te pondrás en la piel de un guerrero deshonrado regresado del borde de la muerte cuya misión es rescatar a su maestro y vengarse de su archinémesis. Desata un arsenal de poderosas habilidades ninja para abatir a tus adversarios y combina el sigilo y la verticalidad para propinar la muerte desde las sombras.</p>
                 <div class="dropdown">
                   <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                     Link de Compra
@@ -170,23 +170,12 @@
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="10000">
                   <img src="./img/EsvFXGYXUAoghze.jpg" class="d-block w-100" alt="fanartdarksouls">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>First slide label</h5>
-                    <p>Some representative placeholder content for the first slide.</p>
-                  </div>
-                </div>                <div class="carousel-item">
+                </div>
+                <div class="carousel-item">
                   <img src="./img/f9d5af20afc632f90b459b0f6c3408b9.jpg" class="d-block w-100" alt="editsekiro">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Third slide label</h5>
-                    <p>Some representative placeholder content for the third slide.</p>
-                  </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
                   <img src="./img/CODE.VEIN.full.2745734.jpg" class="d-block w-100" alt="fanartanimecodevein">
-                  <div class="carousel-caption d-none d-md-block">
-                    <h5>Second slide label</h5>
-                    <p>Some representative placeholder content for the second slide.</p>
-                  </div>
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
@@ -244,19 +233,19 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-              Accordion Item #1
+              ¿Qué es este Sitio Web en realidad?
             </button>
           </h2>
           <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
             <div class="accordion-body">
-              <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>Un sitio hecho con fines estudiantiles.</strong> Exacto este sitio no es mas que un proyecto estudiantil, claro teñido por mi fanatismo pero sea cual sea el motivo por el que llegaste hasta mi sitio espero que hallas disfrutado de el y espero aunque sea haber podido despertar algo de tu curiosidad por este genero tan maravilloso :D
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-              Accordion Item #2
+              ¿Porque se llama "Tienda" si solo es un redireccionador?
             </button>
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
@@ -268,7 +257,7 @@
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-              Accordion Item #3
+              ¡El formulario de Contacto no llega a ningun lado! ¿Porque?
             </button>
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
