--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="./img/desktop-wallpaper-dark-souls-bonfire-praise-the-sun.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./css/styles.css">
     <title>Soulsliker</title>
+    <meta name="description" content="Un Fan-site estudiantil, con el fin de ser tu hoguera base, donde descubras un poquito más sobre este genial genero y talvez te animes a probarte ante el :D">
+    <meta name="keywords" content="Soulslike, Soulsborne, Hidetaka Miyasaki, Videojuegos, Dark Souls">
 </head>
 <body>
     <header class="header">
@@ -250,19 +252,19 @@
           </h2>
           <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
             <div class="accordion-body">
-              <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>Por lo mismo, soy estudiante y no poseo las herramientas actualmente para hacer una, ademas de los muchos terminos legales de por medio ._. .</strong> Del mismo modo creo desde mi humilde opinion es mejor asi, que mejor que comprar en un sitio reconocido y seguro como los oficiales, de mi parte me limite a añadir esos solamente, te nombro Instant Gaming y Eneba para gastar menos por si los prefieres, suerte con tus compras! :D.
             </div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-              ¡El formulario de Contacto no llega a ningun lado! ¿Porque?
+              ¡El formulario de Contacto no lleva a ningun lado! ¿Porque?
             </button>
           </h2>
           <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
             <div class="accordion-body">
-              <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+              <strong>Falta de estudio, estudien!.</strong> Muchas preguntas no tienen respuesta, a veces el solo poder comentar algo al basto cielo es suficiente para dar con una respuesta en uno mismo...eh bueno si, fuera la filosofia, una vez mas no sabria como manipular el transito de la informacion que quieras compartirme pero si prometo hacerle andar cuando lo sepa >:D. Me interesa escuchar sus alabanzas al sol /[T]/
             </div>
           </div>
         </div>
@@ -320,7 +322,10 @@
         </a>
       </div>
       <div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus expedita quae nostrum, illum corporis mollitia odio pariatur modi, alias eveniet quo illo earum? Itaque, modi eligendi dolor debitis repellat repudiandae?</p>
+      <p>↑ Únete a mi grupo de WhatsApp para poder recorrer este nuevo desafío con amigos. ↑</p>
+        <p>Copyright y Licencias:</p>
+<p>Ninguna de las licencias (Imágenes, Videojuegos, Marca) me pertenecen, esto no es mas que un proyecto estudiantil, no pretendo sacar provecho o lucro de ninguna manera.</p>
+<p>↓ Y hablando de estudiar, si quieres aprender a hacer un sitio así o mucho mejor te recomiendo te unas a Coderhouse ↓</p>
      </div>
      <div>
      <a href="https://www.coderhouse.com/" alt="Link a Coderhouse" target="_blank">
