todos los footer listos

--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -252,7 +252,10 @@
         </a>
       </div>
       <div>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus expedita quae nostrum, illum corporis mollitia odio pariatur modi, alias eveniet quo illo earum? Itaque, modi eligendi dolor debitis repellat repudiandae?</p>
+        <p>↑ Únete a mi grupo de WhatsApp para poder recorrer este nuevo desafío con amigos. ↑</p>
+        <p>Copyright y Licencias:</p>
+<p>Ninguna de las licencias (Imágenes, Videojuegos, Marca) me pertenecen, esto no es mas que un proyecto estudiantil, no pretendo sacar provecho o lucro de ninguna manera.</p>
+<p>↓ Y hablando de estudiar, si quieres aprender a hacer un sitio así o mucho mejor te recomiendo te unas a Coderhouse ↓</p>
      </div>
      <div>
      <a href="https://www.coderhouse.com/" alt="Link a Coderhouse" target="_blank">
