--- a/pages/soporte.html
+++ b/pages/soporte.html
@@ -75,40 +75,40 @@
 </section>
 <section>
   <h1>Preguntas Frecuentes</h1>
-  <div class="accordion" id="accordionExample">
+  <div class="accordion" id="accordionPanelsStayOpenExample">
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
           ¿Qué es este Sitio Web en realidad?
         </button>
       </h2>
-      <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+      <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>Un sitio hecho con fines estudiantiles.</strong> Exacto este sitio no es mas que un proyecto estudiantil, claro teñido por mi fanatismo pero sea cual sea el motivo por el que llegaste hasta mi sitio espero que hallas disfrutado de el y espero aunque sea haber podido despertar algo de tu curiosidad por este genero tan maravilloso :D
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
           ¿Porque se llama "Tienda" si solo es un redireccionador?
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>Por lo mismo, soy estudiante y no poseo las herramientas actualmente para hacer una, ademas de los muchos terminos legales de por medio ._. .</strong> Del mismo modo creo desde mi humilde opinion es mejor asi, que mejor que comprar en un sitio reconocido y seguro como los oficiales, de mi parte me limite a añadir esos solamente, te nombro Instant Gaming y Eneba para gastar menos por si los prefieres, suerte con tus compras! :D.
         </div>
       </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          ¿No se que poner aqui aun :D?
+        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+          ¡El formulario de Contacto no lleva a ningun lado! ¿Porque?
         </button>
       </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+      <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
         <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <strong>Falta de estudio, estudien!.</strong> Muchas preguntas no tienen respuesta, a veces el solo poder comentar algo al basto cielo es suficiente para dar con una respuesta en uno mismo...eh bueno si, fuera la filosofia, una vez mas no sabria como manipular el transito de la informacion que quieras compartirme pero si prometo hacerle andar cuando lo sepa >:D. Me interesa escuchar sus alabanzas al sol /[T]/
         </div>
       </div>
     </div>
