textualizado de historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -46,8 +46,12 @@
           <div class="card">
             <img src="../img/202222585863_1.jpg" class="card-img-top" alt="imagendeMiyasaki">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">La historia de Hidetaka Miyasaki</h5>
+              <p class="card-text">Partimos desde su niñez, Nacido entre 1974-1975, creció en un entorno de bajos recursos en Shizuoka a 160Km de Tokio, si aspiraciones y sin un rumbo fijo estudio Ciencias Sociales en la U. de Keio, acabando por decantarse en la empresa TI, Oracle Corporation.</p>
+              <p class="card-text">Cerca de los 30, durante una reunión de excompañeros de la universidad, surgio el nombre del titulo por el cual la saga Souls existe: Ico. Un éxito de culto y de los mejores de la historia, que despertó en Miyazaki “Quiero hacer uno yo mismo”.</p>
+              <p class="card-text">La edad jugo en su contra, en un limbo en el que era mayor para optar por puestos de postgrado y no contar con la experiencia para dedicarse a otra cosa. FromSoftware le dio una oportunidad, empezando como codificador y después de trabajar en Armored Core, se intereso en un proyecto “fracaso”; Demon's Souls. Emocionado tomo el control del proyecto y lo rehízo casi por completo. </p>
+              <p class="card-text">A pesar de no obtener grandes ventas las primeras semanas y hasta tener un rechazo inicial, lo que hacia huir a los jugadores fue lo que los acabaría atrayendo como polillas al fuego; Su dificultad apareciendo para romper moldes y revolucionar un sector donde los juegos no suponían ya ningún reto, convirtiéndose en un éxito que se expandio por el mundo y dio inicio a la magnífica “Saga Souls”.</p>
+              <p class="card-text">Logrando así un acto sin precedentes en Japón, pasar de perder todo poder adquisitivo cambiando de rubro tan atípicamente a ser el presidente de una compañía.</p>
             </div>
           </div>
         </div>
@@ -55,8 +59,10 @@
           <div class="card">
             <img src="../img/88283_1_tencent-and-sony-buy-30-of-fromsoftware-for-259-5-million_full-1024x575.webp" class="card-img-top" alt="imgconelnombredeFromSoftware">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">La trayectoria de FromSoftware</h5>
+              <p class="card-text">FromSoftware, Inc. es una compañía desarrolladora de videojuegos japonesa conocida por crear títulos como King’s Field, Armored Core, Demon’s Souls, Dark Souls o Bloodborne. El estudio nipón tiene más de treinta años de historia, donde ha crecido y evolucionado hasta convertirse en una de las empresas más importantes e influyentes en la industria actual de los videojuegos</p>
+              <p class="card-text">La empresa fue fundada por Naotoshi Zin el 1 de noviembre de 1986, En sus orígenes la compañía se dedicaba a desarrollar software informático de aplicación comercial para empresas de diferentes índoles. El 21 de mayo de 2014 Kadokawa Shōten, famosa editorial japonesa de manga, adquirió el 80% de las acciones de FromSoftware y pasó a formar parte de la imponente matriz Kadokawa Corporation. En la actualidad la empresa cuenta con más de 280 trabajadores en diferentes labores del desarrollo de sus juegos.</p>
+              <p class="card-text">Los títulos mas destacados de la compañía serian: King’s Field, Armored Core, Shadow Tower, Eternal Ring y Evergrade, Lost Kingdoms, Otogi: Myth of Demons, Kuon, Tenchu, y la Saga Souls en la que hace hincapié esta página.</p>
             </div>
           </div>
         </div>
