correciones menores para SEO

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="./index.html">
-                <img src="./img/logo.png">
+                <img src="./img/logo.png" alt="logo pequeño de Solaire">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,7 @@
         <section>
           <h1 class="text">El Lore detras del BOSS</h1>
           <div class="contenedor">
-              <img class="imagen" src="./img/descarga.png">
+              <img class="imagen" src="./img/descarga.png" alt="Imagen con el nombre de la compañia FromSoftware">
               <p class="texto">From Software, la empresa que creo el genero, gracias a la labor de un hombre; Hidetaka Miyasaki. Que aposto por Demons Souls alla en 2009 un juego que la compania habia abandonado y con el que decidio abocarce, apesar de no tener un gran recibimiento en Japon, cuando fue lanzado al resto del mundo empezo a ganar gran peso como "El juego más dificil" concluyendo el inicio de la Era Souls de la compania del lanzamiento de "Dark Souls" en 2011, que se ha ganado el titulo de mejor juego de la historia en una premiación de 2022.</p>
             </div>
         </section>
