--- a/pages/videojuegos.html
+++ b/pages/videojuegos.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
-                <img src="../img/logo.png">
+                <img src="../img/logo.png" alt="logo pequeño de Solaire">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -51,13 +51,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Demons Souls/maxresdefault.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Demons Souls/maxresdefault.jpg" class="d-block w-100" alt="Imagen Gameplay del Demons souls original">
             </div>
             <div class="carousel-item">
-              <img src="../img/Demons Souls/La-misteriosa-porta-di-Demons-Souls-e-stata-aperta-ecco-cosa-ce-dentro-1-scaled.webp" class="d-block w-100" alt="...">
+              <img src="../img/Demons Souls/La-misteriosa-porta-di-Demons-Souls-e-stata-aperta-ecco-cosa-ce-dentro-1-scaled.webp" class="d-block w-100" alt="Parte del Trailer del Remake del demons souls">
             </div>
             <div class="carousel-item">
-              <img src="../img/Demons Souls/202061211394510_1.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Demons Souls/202061211394510_1.jpg" class="d-block w-100" alt="Imagen comparativa de los graficos del original y el remake">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -81,13 +81,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Dark Souls/maxresdefault (1).jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls/maxresdefault (1).jpg" class="d-block w-100" alt="Portada Fanart de Dark Souls">
             </div>
             <div class="carousel-item">
-              <img src="../img/Dark Souls/darksouls_258103b.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls/darksouls_258103b.jpg" class="d-block w-100" alt="gameplay de un momento sorpresivo en el juego ">
             </div>
             <div class="carousel-item">
-              <img src="../img/Dark Souls/20185415156_1.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls/20185415156_1.jpg" class="d-block w-100" alt="Cinematica del player contra artorias del dlc">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
@@ -112,13 +112,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Dark Souls 2/capsule_616x353.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls 2/capsule_616x353.jpg" class="d-block w-100" alt="Portada del Dark Souls 2">
             </div>
             <div class="carousel-item">
-              <img src="../img/Dark Souls 2/dragon-screenshot-homepage-dark-souls-2-wiki-guide-1920px-min.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls 2/dragon-screenshot-homepage-dark-souls-2-wiki-guide-1920px-min.jpg" class="d-block w-100" alt="cinematica de ataque a un dragon con arco y flecha">
             </div>
             <div class="carousel-item">
-              <img src="../img/Dark Souls 2/ss_3b2006322099225a4ea8f17830b4b9fbd2f78864.1920x1080.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls 2/ss_3b2006322099225a4ea8f17830b4b9fbd2f78864.1920x1080.jpg" class="d-block w-100" alt="gameplay coperativo del juego">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="prev">
@@ -142,13 +142,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Dark Souls 3/maxresdefault.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls 3/maxresdefault.jpg" class="d-block w-100" alt="Portada dark souls 3">
             </div>
             <div class="carousel-item">
-              <img src="../img/Dark Souls 3/1366_2000.jpeg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls 3/1366_2000.jpeg" class="d-block w-100" alt="gameplay coperativo contra la bailarina">
             </div>
             <div class="carousel-item">
-              <img src="../img/Dark Souls 3/1-ds3_launch_trailer.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Dark Souls 3/1-ds3_launch_trailer.jpg" class="d-block w-100" alt="cinematica de entrentamiento contra el rey sin nombre">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators4" data-bs-slide="prev">
@@ -172,13 +172,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Bloodborne/FncUSvu0fjmUeBcagIiuXOiD.webp" class="d-block w-100" alt="...">
+              <img src="../img/Bloodborne/FncUSvu0fjmUeBcagIiuXOiD.webp" class="d-block w-100" alt="Portada de la version goty del bloodborne">
             </div>
             <div class="carousel-item">
-              <img src="../img/Bloodborne/bb_tgs_6_wide-018769fbfe88268abddef71c79380be087068c81-s1100-c50.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Bloodborne/bb_tgs_6_wide-018769fbfe88268abddef71c79380be087068c81-s1100-c50.jpg" class="d-block w-100" alt="gameplay de combate junto a un npc importante">
             </div>
             <div class="carousel-item">
-              <img src="../img/Bloodborne/1366_2000.jpeg" class="d-block w-100" alt="...">
+              <img src="../img/Bloodborne/1366_2000.jpeg" class="d-block w-100" alt="imagen gameplay del player con la muñeca del sueño del cazador">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators5" data-bs-slide="prev">
@@ -202,13 +202,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Sekiro/Sekiro_Content_sidebanner" class="d-block w-100" alt="...">
+              <img src="../img/Sekiro/Sekiro_Content_sidebanner" class="d-block w-100" alt="Portada sekiro">
             </div>
             <div class="carousel-item">
-              <img src="../img/Sekiro/ab3f7fc7-0001-0004-0000-000001409060_w996_r1.778_fpx30.93_fpy55.01.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Sekiro/ab3f7fc7-0001-0004-0000-000001409060_w996_r1.778_fpx30.93_fpy55.01.jpg" class="d-block w-100" alt="cinematica en la que el player pierde el brazo">
             </div>
             <div class="carousel-item">
-              <img src="../img/Sekiro/1366_2000.jpeg" class="d-block w-100" alt="...">
+              <img src="../img/Sekiro/1366_2000.jpeg" class="d-block w-100" alt="gameplay de enfrentamiento con un guardia shogun">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators6" data-bs-slide="prev">
@@ -232,13 +232,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Code Vein/Code-Vein-head.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Code Vein/Code-Vein-head.jpg" class="d-block w-100" alt="portada code vein">
             </div>
             <div class="carousel-item">
-              <img src="../img/Code Vein/DUYysJ2VMAEYNZ0.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Code Vein/DUYysJ2VMAEYNZ0.jpg" class="d-block w-100" alt="animacion de io tendiendote la mano">
             </div>
             <div class="carousel-item">
-              <img src="../img/Code Vein/code-vein-blood-codes-e1569502148151.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Code Vein/code-vein-blood-codes-e1569502148151.jpg" class="d-block w-100" alt="gameplay de la mecanica de drenado">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators7" data-bs-slide="prev">
@@ -262,13 +262,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Mortal Shell/capsule_616x353.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Mortal Shell/capsule_616x353.jpg" class="d-block w-100" alt="portada mortal shell">
             </div>
             <div class="carousel-item">
-              <img src="../img/Mortal Shell/O63IMWDHERGAXHTAFU54ZYPU6Y.png" class="d-block w-100" alt="...">
+              <img src="../img/Mortal Shell/O63IMWDHERGAXHTAFU54ZYPU6Y.png" class="d-block w-100" alt="cinematica de enfrentamiento con boss encadenado">
             </div>
             <div class="carousel-item">
-              <img src="../img/Mortal Shell/ss_2211579560e8445ce0e6707ee944b2ba947e19cd.1920x1080.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Mortal Shell/ss_2211579560e8445ce0e6707ee944b2ba947e19cd.1920x1080.jpg" class="d-block w-100" alt="gameplay de lucha con boss menor">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators8" data-bs-slide="prev">
@@ -292,13 +292,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Hollow Knight/capsule_616x353.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Hollow Knight/capsule_616x353.jpg" class="d-block w-100" alt="portada hollow knight">
             </div>
             <div class="carousel-item">
-              <img src="../img/Hollow Knight/hollow-knight-07-07-2021-4.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Hollow Knight/hollow-knight-07-07-2021-4.jpg" class="d-block w-100" alt="gameplay de descanso en villa raiz">
             </div>
             <div class="carousel-item">
-              <img src="../img/Hollow Knight/hollow-knight-1943657.webp" class="d-block w-100" alt="...">
+              <img src="../img/Hollow Knight/hollow-knight-1943657.webp" class="d-block w-100" alt="imagen de cinematica en el coliseo">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators9" data-bs-slide="prev">
@@ -322,13 +322,13 @@
           </div>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="../img/Elden Ring/dl3d5ccidn9wlkemhfjr.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Elden Ring/dl3d5ccidn9wlkemhfjr.jpg" class="d-block w-100" alt="portada elden ring">
             </div>
             <div class="carousel-item">
-              <img src="../img/Elden Ring/Elden-Ring-1.webp" class="d-block w-100" alt="...">
+              <img src="../img/Elden Ring/Elden-Ring-1.webp" class="d-block w-100" alt="cinematica de malenia">
             </div>
             <div class="carousel-item">
-              <img src="../img/Elden Ring/MXAXZUK4QJHS5M63I6SZWVLTXA.jpg" class="d-block w-100" alt="...">
+              <img src="../img/Elden Ring/MXAXZUK4QJHS5M63I6SZWVLTXA.jpg" class="d-block w-100" alt="gameplay cinematica de enfrentamiento a caballo">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators10" data-bs-slide="prev">
