--- a/pages/historia.html
+++ b/pages/historia.html
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
             <div class="container-fluid">
               <a class="navbar-brand" href="../index.html">
-                <img src="../img/logo.png">
+                <img src="../img/logo.png" alt="logo pequeño de Solaire">
               </a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
