Fin del textualizado historia

--- a/pages/historia.html
+++ b/pages/historia.html
@@ -70,8 +70,10 @@
           <div class="card">
             <img src="../img/GUk9iXZQYjUWuoYL8vdWhj.jpg" class="card-img-top" alt="librosDS">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+              <h5 class="card-title">La razón detrás del porque su historia se cuenta de esta manera.</h5>
+              <p class="card-text">El hambre agudiza el ingenio, por lo que el pequeño Miyazaki acabó recurriendo a la biblioteca para saciar su sed de conocimiento. Algunos de los libros que disfrutó en aquel entonces estaban lejos de su capacidad lectora y aún sin entender los textos en su totalidad, el que acabaría siendo director de FromSoftware dejaba volar su imaginación, guiándose por las ilustraciones para ir conformando el libro a su manera.</p>
+              <p class="card-text">Una habilidad que años después le permitirían imaginar las dimensiones oscuras y ricas en matices que actualmente disfrutan millones de jugadores. Esta mecánica de ir rellenando a golpe de imaginación, los huecos en blanco entre historias es la base de los Soulsborne. </p>
+              <p class="card-text">Títulos en los que el jugador va conformando en su cabeza la trama según avanza, siendo coautor de la obra en su propia experiencia con el juego, al igual que hacía el joven Miyazaki con los libros de la biblioteca.</p>
             </div>
           </div>
         </div>
@@ -79,8 +81,10 @@
           <div class="card">
             <img src="../img/6228fdbad60efb2ed81cd3ff.jpg" class="card-img-top" alt="imgJuegosretro">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <h5 class="card-title">De donde nacio su peso en la dificultad</h5>
+              <p class="card-text">Retrocedemos un poco a los años donde los videojuegos apenas estaban surgiendo en la industria, dadas la limitada cantidad de recursos y medios para invertir en ellos, lo normal era que los mismos fueran difíciles, no por el reto sino para poder alargar el tiempo de juego con esos bloques de dificultad.</p>
+              <p class="card-text">Cosa que con forme fueron avanzando los tiempos se dejaron atrás, puesto que a nivel comercial; ¿Quién querría comprar un juego que no podría pasarse?, eso llevo a un tiempo en que todos los juegos se limitaban a ser una buena historia y de estructura simple para que cualquiera los disfrutara.</p>
+              <p class="card-text">Pero como humanos, siempre buscaremos lo que no nos dan, y allí llego Demons Souls. Un juego que empezó a catalogarse con títulos como: “El juego imposible”, que empezó a resonar en una época en la que los retos así eran un mito y se impulsó por él hasta lo que vemos hoy.</p>
             </div>
           </div>
         </div>
